--- a/YelpCamp/package.json
+++ b/YelpCamp/package.json
@@ -4,7 +4,8 @@
   "description": "#v1 * Add Landing Page * Add Campgrounds Page that lists all campgrounds \t* Name \t* Image",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "Shiyu Huang",
   "license": "ISC",
@@ -15,7 +16,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "method-override": "^3.0.0",
-    "mongoose": "^5.9.15",
+    "mongoose": "^5.9.19",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1"
